FAC-208: temp test added